# Ferrum-Chat-

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml
backend/migrations/: 20260429170000_init.sql
backend/src/: main.rs
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: useWebSocket.ts
frontend/types/: chat.ts
